[package]
name = "Dual"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coarsetime = "0.1.37"
lazy_static = "1.4.0"

[profile.release]
lto = "fat"

#profiling profile
[profile.bench]
debug = true
lto = "fat"
codegen-units = 1
