[package]
name = "Dual"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
coarsetime = "0.1.37"
lazy_static = "1.4.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
lto = "fat"

#profiling profile
[profile.bench]
debug = true
lto = "fat"
codegen-units = 1
